@@ -35,7 +35,6 @@ from PySide2.QtWidgets import (
 
 from ..api_control import api
 from ..const_file import ConfigType
-from ..module_control import wctrl
 from ..setting import cfg, copy_setting
 from ..userfile.heatmap import HEATMAP_DEFAULT_BRAKE, set_predefined_brake_name
 from ._common import (
@@ -248,5 +247,5 @@ class BrakeEditor(BaseEditor):
         cfg.save(0, cfg_type=ConfigType.BRAKES)
         while cfg.is_saving:  # wait saving finish
             time.sleep(0.01)
-        wctrl.reload()
+        self.reloading()
         self.set_unmodified()
