@@ -35,7 +35,6 @@ from PySide2.QtWidgets import (
 
 from ..api_control import api
 from ..const_file import ConfigType
-from ..module_control import wctrl
 from ..setting import cfg, copy_setting
 from ..userfile.heatmap import HEATMAP_DEFAULT_TYRE, set_predefined_compound_symbol
 from ._common import (
@@ -257,5 +256,5 @@ class TyreCompoundEditor(BaseEditor):
         cfg.save(0, cfg_type=ConfigType.COMPOUNDS)
         while cfg.is_saving:  # wait saving finish
             time.sleep(0.01)
-        wctrl.reload()
+        self.reloading()
         self.set_unmodified()
